src/test/test-models/good/optimization/constrain_sigma.stan
parameters {
  real<lower=0> sigma;
}
model {
  sigma ~ normal(3, 1);
}
