src/test/test-models/bad/validate_set_double_offset_multiplier_bad2.stan
parameters {
  vector[3] vvv;
  real<multiplier=vvv> a;
  real y;
}

model {
  y ~ normal(0,1);
}
